--- a/Lucuber/Base.lproj/Result.storyboard
+++ b/Lucuber/Base.lproj/Result.storyboard
@@ -11,11 +11,11 @@
         <!--成绩-->
         <scene sceneID="aiC-OS-a5Z">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gIz-68-p47" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gIz-68-p47" customClass="MainNavigationController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="成绩" image="tabbar_result" selectedImage="tabbar_result_sele" id="omy-6e-kO8"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="3KM-a9-66C">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3KM-a9-66C">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
